add developer dashboard

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -17,7 +17,7 @@
 
 <body class="bg-gray-50">
     <!-- Sidebar -->
-    <div class="sidebar d-flex flex-column justify-content-between" id="sidebar">
+    <div class="sidebar d-flex flex-column justify-content-between collapsed" id="sidebar">
         <!-- Top Section: Branding and Navigation -->
         <div>
             <div class="p-4">
@@ -45,7 +45,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="main-content" id="mainContent">
+    <div class="main-content expanded" id="mainContent">
         <!-- Top Navigation Bar -->
         <div class="topbar">
             <div class="d-flex align-items-center">
