--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -31,6 +31,7 @@
             <select id="role" name="role" required>
                 <option value="user">User</option>
                 <option value="admin">Admin</option>
+                <option value="developer">Developer</option>
             </select>
             
             <button type="submit">Create User</button>
