--- a/templates/add_property.html
+++ b/templates/add_property.html
@@ -20,7 +20,7 @@
             <input type="text" id="building_no" name="building_no" placeholder="Enter Building No" required>
 
             <label for="bedrooms">Bedrooms</label>
-            <input type="number" id="bedrooms" name="bedrooms" placeholder="Number of bedrooms" required>
+            <input type="text" id="bedrooms" name="bedrooms" placeholder="Number of bedrooms" required>
 
             <label for="rent_price">Rent Price</label>
             <input type="number" id="rent_price" name="rent_price" placeholder="Rent price" required>
@@ -48,8 +48,12 @@
             <label for="developer_name">Developer / Company Name</label>
             <input type="text" id="developer_name" name="developer_name" placeholder="Enter Company Name" required>
 
-            <label for="location">Location</label>
+            <label for="location">Area</label>
             <input type="text" id="location" name="location" placeholder="Enter location" required>
+
+            <label for="Maps_link">Google Maps Link</label>
+            <input type="text" id="Maps_link" name="Maps_link" placeholder="Enter Google Maps link">
+
 
             <button type="submit">Add Property</button>
         </form>
