--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -164,7 +164,8 @@
                                         <th>Unit No</th>
                                         <th>Status</th>
                                         <th>Developer</th>
-                                        <th>Location</th>
+                                        <th>Area</th>
+                                        <th>Google Maps Link</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -239,6 +240,10 @@
                                         <td>
                                             <input type="text" class="form-control form-control-sm property-field"
                                                 name="location" value="{{ property['location'] }}">
+                                        </td>
+
+                                        <td> <input type="text" class="form-control form-control-sm property-field"
+                                                name="Maps_link" value="{{ property.get('Maps_link', '') }}">
                                         </td>
 
                                         <td>
