--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anaya Real Estate Development</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
@@ -100,12 +102,13 @@
                     <th>Unit No</th>
                     <th>Status</th>
                     <th>Developer</th>
-                    <th>Location</th>
+                    <th>Area</th>
+                    <th>Map</th>
                 </tr>
             </thead>
             <tbody>
                 {% for row in data %}
-                <tr>
+                <tr >
                     <td>{{ row['property_no'] }}</td>
                     <td>{{ row['building_no'] }}</td>
                     <td>{{ row['bedrooms'] }}</td>
@@ -123,6 +126,12 @@
 
                     <td>{{ row['developer_name'] }}</td>
                     <td>{{ row['location'] }}</td>
+                    <td class="text-center">
+                        {% if row['Maps_link'] %}
+                        <a href="{{ row['Maps_link'] }}" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill fs-5"></i> </a>
+                        {% endif %}
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
