--- a/templates/company_add_property.html
+++ b/templates/company_add_property.html
@@ -21,7 +21,7 @@
             </div>
             <div class="mb-3">
                 <label for="bedrooms" class="form-label">Bedrooms</label>
-                <input type="number" class="form-control" id="bedrooms" name="bedrooms" required>
+                <input type="text" class="form-control" id="bedrooms" name="bedrooms" required>
             </div>
             <div class="mb-3">
                 <label for="rent_price" class="form-label">Rent Price</label>
